# icloud-hide-my-email-script

./: .gitignore  LICENSE  README.md  deactivate_icloudemails.py  pyproject.toml  run.py
docs/: USAGE.md
src/: hide_my_email_manager.py
